removed horizontal scroll + correct navbar

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -326,7 +326,7 @@ header {
             margin-bottom: 0;
             position: absolute;
             top: 50%;
-            left: 80%;
+            left: 78%;
             transform: translate(-50%, -50%);
 
             .nav-link {
